--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-animate": "^1.6.6",
     "angular-aria": "^1.6.6",
     "angular-material": "^1.1.5",
+    "angular-ui-router": "^0.4.3",
     "mdi": "^2.0.46"
   }
 }
